--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,6 +41,73 @@ blockquote, q {
 	quotes: none;
 }
 
+
+
+/* Nav */
+
+#nav {
+	margin: 2.5em 0 0 0;
+}
+
+	#nav > ul {
+		margin: 0;
+	}
+
+		#nav > ul > li {
+			display: inline-block;
+			/* font-style: italic; */
+			margin: 0 0.35em 0 0.35em;
+		}
+
+			#nav > ul > li > ul {
+				display: none;
+			}
+
+			#nav > ul > li > a {
+				border-radius: 5px;
+				color: #5d5d5d;
+				/* color: #5d5d5d; */
+
+				text-decoration: none;
+				padding: 0.6em 1.2em 0.6em 1.2em;
+				-moz-transition: background-color .25s ease-in-out;
+				-webkit-transition: background-color .25s ease-in-out;
+				-ms-transition: background-color .25s ease-in-out;
+				transition: background-color .25s ease-in-out;
+				outline: 0;
+			}
+
+			#nav > ul > li:hover > a, #nav > ul > li.active > a {
+				background: #f3f3f364;
+				/* background: #f3f3f3; */
+
+			}
+
+			#nav > ul > li.current > a {
+				background: #7fbeb7;
+				color: #fff !important;
+				font-weight: 700;
+			}
+
+
+			/* Header */
+
+	#header {
+		position: relative;
+		background: #ffffff;
+		border-bottom: solid 1px #ccc;
+		padding: 5em 0 4em 0;
+		text-align: center;
+	}
+
+		#header h1 {
+			color: #252122;
+			font-weight: 900;
+			font-size: 2.5em;
+			letter-spacing: -0.035em;
+			line-height: 1;
+		}
+
 	blockquote:before, blockquote:after, q:before, q:after {
 		content: '';
 		content: none;
@@ -88,6 +155,20 @@ input, select, textarea {
 			min-width: 320px;
 		}
 
+		#nav > ul > li.current > a {
+			background: #7fbeb7;
+			color: #fff !important;
+			font-weight: 700;
+			font-size: small;
+			
+		}
+	 .needs {
+			text-align:left;
+		}
+	
+		.called {
+			text-align: left;
+		}
 	}
 
 	html {
@@ -113,6 +194,8 @@ input, select, textarea {
 			transition: none !important;
 		}
 
+		
+
 /* Type */
 
 	html {
@@ -124,6 +207,7 @@ input, select, textarea {
 			html {
 				font-size: 14pt;
 			}
+	
 
 		}
 
@@ -132,13 +216,38 @@ input, select, textarea {
 			html {
 				font-size: 12pt;
 			}
+		
+			#nav > ul > li.current > a {
+				background: #7fbeb7;
+				color: #fff !important;
+				font-weight: 700;
+				font-size: small;
+				
+			}
 
+			.needs {
+				text-align:left;
+			}
+			
+			.calleds {
+			text-align: left;
+			margin-left: 40px;
+			
+			}
+			
 		}
 
 		@media screen and (max-width: 736px) {
 
 			html {
 				font-size: 11pt;
+			}
+			#nav > ul > li.current > a {
+				background: #7fbeb7;
+				color: #fff !important;
+				font-weight: 700;
+				font-size: x-small;
+				
 			}
 
 		}
@@ -148,7 +257,13 @@ input, select, textarea {
 			html {
 				font-size: 10pt;
 			}
-
+			#nav > ul > li.current > a {
+				background: #7fbeb7;
+				color: #fff !important;
+				font-weight: 700;
+				font-size: small;
+				
+			}
 		}
 
 	body {
